2008-07-03  Martin Lambers <marlam@marlam.de>

	* src/dataset_selector.h, src/dataset_selector.cpp, src/cvlview.cpp:
	Add a SpinBox that allows to jump to specific data sets.
	* src/dataset_selector.cpp: Fix.

2008-07-02  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Clear the color buffer on initialization and on
	certain errors.
	* TODO: Update.

2008-07-01  Martin Lambers <marlam@marlam.de>

	* gllib/glvm.h: Add cbrt() functions.
	* gllib/glvm-color.h: Add CIE L*a*b* color space.
	* gllib/glvm.h: Small improvements and a bugfix.

2008-06-30  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Normalize rotation quaternion to guarantee that
	it represents a rotation.
	* gllib/glvm.h: Improvements.
	* gllib/glvm-color.h, Makefile.am: New GLVM module for color space
	conversions.
	* src/view_area.cpp: Use glvm-color module.
	* src/view_area.cpp: Print luminance information in pixel info area
	also for formats like RGBA, RGBZ, and others.
	* TODO: Update.
	* src/heightmap_selector.h, src/heightmap_selector.cpp,
	src/heightmap_quads_vs.glsl, src/heightmap_strip_vs.glsl,
	src/view_area.cpp: Always use selected range as height data. Apply
	gamma correction to height data.
	* src/heightmap_selector.cpp: Improve height factor selection.

2008-06-26  Martin Lambers <marlam@marlam.de>

	* gllib/Makefile.am, gllib/glvm.h, gllib/glvm-gl.h, gllib/arcball.h,
	gllib/arcball.cpp, Makefile.am, configure.ac: Add gllib, a set of
	useful routines for use with OpenGL.
	* src/rotation_selector.h, src/rotation_selector.cpp, src/view_area.h,
	src/view_area.cpp, src/cvlview.cpp, Makefile.am: Implement proper 3D
	rotation with 2D mouse using gllib's ArcBall class.
	* src/view_area.cpp: Only rotate when in 3D view mode.
	* src/grid_selector.h, src/grid_selector.cpp, src/view_area.h,
	src/view_area.cpp, src/cvlview.h, src/cvlview.cpp, src/Makefile.am:
	Add grid selector that allows to display a data pixel grid in flat view.
	* TODO: Update.
	* NEWS: Update.