@@ -1,7 +1,5 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
 	<file>icons/appicon.png</file>
-	<file>icons/prev.png</file>
-	<file>icons/next.png</file>
 </qresource>
 </RCC>
