@@ -23,7 +23,7 @@
 
 #include <QWidget>
 #include <QGridLayout>
-#include <QPushButton>
+#include <QLabel>
 #include <QSpinBox>
 
 #include "datafile.h"
@@ -39,25 +39,21 @@ DatasetSelector::DatasetSelector(DataFile **datafile, QWidget *parent)
 
     QGridLayout *layout = new QGridLayout;
     
-    _p_button = new QPushButton(QIcon(":icons/prev.png"), "");
-    _p_button->setShortcut(tr("Left"));
-    _p_button->setAutoDefault(false);
-    connect(_p_button, SIGNAL(clicked()), this, SLOT(p_button_clicked()));
-    layout->addWidget(_p_button, 0, 0);
-    _n_button = new QPushButton(QIcon(":icons/next.png"), "");
-    _n_button->setShortcut(tr("Right"));
-    _n_button->setAutoDefault(false);
-    connect(_n_button, SIGNAL(clicked()), this, SLOT(n_button_clicked()));
-    layout->addWidget(_n_button, 0, 1);
+    QLabel *label = new QLabel("Data set:");
+    layout->addWidget(label, 0, 0);
     _nr_spinbox = new QSpinBox();
-    _nr_spinbox->setRange(1, 9999999);
+    _nr_spinbox->setRange(1, 9999);
     _nr_spinbox->setSingleStep(1);
     _nr_spinbox->setValue(1);
 #if QT_VERSION >= 0x040300
     _nr_spinbox->setKeyboardTracking(false);
 #endif
     connect(_nr_spinbox, SIGNAL(valueChanged(int)), this, SLOT(set_nr(int)));
-    layout->addWidget(_nr_spinbox, 0, 2);
+    layout->addWidget(_nr_spinbox, 0, 1);
+    _total_label = new QLabel("/ 0000");
+    layout->addWidget(_total_label, 0, 2);
+    _total_label->setFixedWidth(_total_label->sizeHint().width());
+    _total_label->setText("");
 
     layout->setRowStretch(1, 1);
     setLayout(layout);
@@ -67,35 +63,10 @@ DatasetSelector::~DatasetSelector()
 {
 }
 
-void DatasetSelector::p_button_clicked()
+void DatasetSelector::reset()
 {
-    if (!*_datafile)
-	return;
-
-    if ((*_datafile)->index() > 1)
-    {
-	(*_datafile)->prev();	// move file pointer to current data set
-	(*_datafile)->prev();	// move file pointer to previous data set
-	emit dataset_changed();
-	_lock = true;
-	_nr_spinbox->setValue((*_datafile)->index());
-	_lock = false;
-    }
-}
-
-void DatasetSelector::n_button_clicked()
-{
-    if (!*_datafile)
-	return;
-
-    if ((*_datafile)->index() != (*_datafile)->total())
-    {
-	// filepointer already points to next data set
-	emit dataset_changed();
-	_lock = true;
-	_nr_spinbox->setValue((*_datafile)->index());
-	_lock = false;
-    }
+    _total_label->setText("");
+    _nr_spinbox->setValue(1);
 }
 
 void DatasetSelector::set_nr(int nr)
@@ -171,6 +142,10 @@ void DatasetSelector::set_nr(int nr)
 
 	emit dataset_changed();
 	_nr_spinbox->setValue((*_datafile)->index());
+	if ((*_datafile)->total() != -1)
+	{
+	    _total_label->setText(mh_string("/ %4d", (*_datafile)->total() - 1).c_str());
+	}
 	_lock = false;
     }
 }
