@@ -25,8 +25,8 @@
 #include "config.h"
 
 #include <QWidget>
-#include <QPushButton>
 #include <QSpinBox>
+#include <QLabel>
 
 #include "datafile.h"
 
@@ -37,20 +37,20 @@ class DatasetSelector : public QWidget
 	
     private:
 	DataFile **_datafile;
-	QPushButton *_p_button;
-	QPushButton *_n_button;
 	QSpinBox *_nr_spinbox;
+	QLabel *_total_label;
 	bool _lock;
 
     private slots:
-	void p_button_clicked();
-    	void n_button_clicked();
 	void set_nr(int nr);
 
     public:
 	DatasetSelector(DataFile **datafile, QWidget *parent = NULL);	
 	~DatasetSelector();
 
+    public slots:
+	void reset();
+    
     signals:
 	void make_gl_context_current();
 	void dataset_changed();
